# learningOS-MCP

./: .env.example  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/learningos_mcp/: auth.py  gdrive_client.py  server.py
